# numberology

./: .gitignore  AI_FRIENDLY_IMPROVEMENTS.md  BUILD_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  EXAMPLE_INPUT_OUTPUT.md  EXTENDED_REPORT_GUIDE.md  FINAL_CHECKLIST.md  INSTALLATION.md  JSON_OUTPUT_ANALYSIS.md  KEY_NAMES_IMPROVEMENTS.md  LIBRARY_STRUCTURE.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  VERSION_2.0_IMPROVEMENTS.md  ai_numerology_report.py  demo_extended_report.py  demo_input_output.py  interpretations.py  numerology.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_installation.py  test_quick.py  tran_anh_minh_v2.1.json  tran_anh_minh_v2.json
.claude/: settings.local.json
numerology/: __init__.py  core.py
tests/: __init__.py  test_core.py
